--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/zabdielcead/pracNodeVf5#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.11.1",
+    "mongoose": "^5.12.12",
+    "sequelize": "^6.6.2"
   }
 }
