--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3001
 MONGODB_CNN=mongodb+srv://user_node_cafe:zabdiel1@mycluster.iafyy.mongodb.net/cafeDB
 USER=user_node_cafe
 PASS=zabdiel1
+SECRETORPRIVATEKEY=Est03sMyPublicK3y23@92
